# blueprint-synth

./: BUILD_ORDER.md  LICENSE  README.md  blueprint_design.md  demo_real_estate.py  pyproject.toml
.github/workflows/: pypi-publish.yml
blueprint/: __init__.py
blueprint/core/: __init__.py  blueprint.py  dag.py  feature.py  influence.py  klass.py
blueprint/effects/: __init__.py  applicators.py  parser.py
blueprint/emitter/: __init__.py  formats.py
blueprint/generators/: __init__.py  boolean.py  categorical.py  identity.py  numeric.py  temporal.py  text.py
blueprint/presets/: __init__.py  classes.py  influences.py  recipes.py
docs/notebooks/: 01_getting_started.ipynb  02_features_deep_dive.ipynb  03_classes.ipynb  04_influences.ipynb  05_dependency_dag.ipynb  06_assembly_and_emission.ipynb  NOTEBOOK_PLAN.md
tests/: test_blueprint.py  test_class.py  test_dag.py  test_effects.py  test_feature.py  test_generators.py  test_influence.py  test_recipes.py
